--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,7 @@ android {
 }
 
 dependencies {
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     def room_version = "2.3.0"
 
     implementation "androidx.room:room-runtime:$room_version"
@@ -64,6 +65,12 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation "com.google.dagger:hilt-android:$hilt_version"
     implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.3")
+
+    implementation "com.yuyakaido.android:card-stack-view:2.3.4"
+    implementation 'com.makeramen:roundedimageview:2.3.0'
+
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
 
     kapt "com.google.dagger:hilt-compiler:$hilt_version"
 
